# staff-plus-genai-interviews

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  mlc.yaml  pre-commit.yml  semgrep.yml  trufflehog.yml
interviews/audio/back_market/: example_interview.txt
interviews/questions/: questions.txt
prompts/: extract_and_summarize_interviews_content.yaml  refine_audio_transcription_interview.yaml
src/: llm.py  main.py
tests/: test_llm.py  test_main.py
tests/interviews/: interview_1.txt  interview_2.txt
